# DualAPI-WFO-Analytics

./: .gitattributes  .gitignore  README.md  __init__.py  definitions.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
collectVerintAPI+Analytics/: pytest.ini  requirements.txt
collectVerintAPI+Analytics+collectWFO_Cert/: .env  .gitignore  __main__.py  conftest.py  definitions.py  main.py  main_start.py  pytest.ini  version.py
collectVerintAPI+Analytics+collectWFO_Cert/Sphinx-docs/: collectVerintAPI+Analytics+collectWFO_Cert.3rdparty.rst  conf.py
collectVerintAPI+Analytics+collectWFO_Cert/config/: config.yml
collectVerintAPI+Analytics+collectWFO_Cert/hooks/: hook-pytest_html.py
collectVerintAPI+Analytics+collectWFO_Cert/is_number/: __init__.py  version.py
collectVerintAPI+Analytics+collectWFO_Cert/logs/: pytest-logs.txt
collectVerintAPI+Analytics+collectWFO_Cert/report/: test_results.html
collectVerintAPI+Analytics+collectWFO_Cert/src/: __init__.py
collectVerintAPI+Analytics+collectWFO_Cert/tests/: plain_client_socket.py  test_AnalyticsEngDetail.py  test_all_start.py  test_collectDF.py  test_collectWFO_CertExpiry.py  test_sendCaptVerifReqWithToken.py  test_sendSearchAndReplayReqWithToken.py
collectVerintAPI+Analytics/config/: config.yml
docs/: conf.py  index.rst
logs/: pytest-logs.txt
output/EngDetailedReport/: testED-Daily.csv  (+1 more)
report/: report.html  test_results.html
tests/: plain_client_socket.py  test_all_start.py  test_collectWFO_CertExpiry.py  test_sendCaptVerifReqWithToken.py  test_sendSearchAndReplayReqWithToken.py
(+18 files in other folders)
