[project]
name = "collectAPI"
version = "0.0.1"
description = "collect API example package"
authors = [
    { name = "VW", email = "victorm@avaya.com" }
]
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
[tools.setuptools.packages.find]
where = ["src"]
[build-system]
requires = ["setuptools", "tomli", "python_version < 3.11"]
build-backend = "setuptools.build_meta"

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "src/APICollect/_version.py"
versionfile_build = "APICollect/_version.py"
tag_prefix = ""
parentdir_prefix = ""

[project.scripts]
cli_start = "src.collectAPI.main_start:main_start"