[aliases]
test=pytest
[options.entry_points]
console_scripts =
    cli_start=collectVerintAPI+Analytics+collectWFO_Cert.__main__:main
[versioneer]
VCS = git
style = pep440
versionfile_source = collectVerintAPI+Analytics+collectWFO_Cert/is_number/version.py
versionfile_build = collectVerintAPI+Analytics+collectWFO_Cert/is_number/version.py
tag_prefix =
parentdir_prefix =